ngrx effect impl v1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
       "@training/*": ["app/training/*"],
       "@current-style/*": ["app/custom/*"],
       "@reducers/*": ["app/reducers/*"],
-      "@fitness/store/*": ["app/store/*"]
+      "@fitness/store/*": ["app/store/*"],
     }
   },
   "angularCompilerOptions": {
